--- a/_config.yml
+++ b/_config.yml
@@ -4,19 +4,20 @@ permalink: '/:title/'
 color_scheme: light
 accent_color: pink
 header:
-  title: Exto
   has_nav: true
+  logo_img: /images/logo.svg
+  title: Exto
 footer:
   content: '&copy; Stackbit-Exto. All rights reserved.'
-  links:
-    - text: Made with Stackbit
-      url: 'https://www.stackbit.com'
-      new_window: true
   has_social: true
+  links:
+    - new_window: true
+      text: Made with Stackbit
+      url: 'https://www.stackbit.com'
 sass:
   indentWidth: 4
-  style: nested
   precision: 10
+  style: nested
 plugins:
   - jekyll-menus
 exclude:
@@ -33,6 +34,3 @@ exclude:
   - netlify.toml
   - stackbit-build.sh
   - stackbit-pull.js
-collections:
-  posts:
-    permalink: '/posts/:title/'
